--- a/app/globals.css
+++ b/app/globals.css
@@ -187,7 +187,8 @@
   }
 
   .submit-button {
-    @apply bg-purple-gradient bg-cover rounded-full py-4 px-6 p-16-semibold h-[50px] w-full md:h-[54px];
+    @apply bg-cover rounded-full py-4 px-6 p-16-semibold h-[50px] w-full md:h-[54px];
+    background-color: #00273f;
   }
 
   .select-field {
@@ -237,7 +238,7 @@
   }
 
   .credits-btn {
-    @apply w-full rounded-full bg-purple-100 bg-cover text-purple-500 hover:text-purple-500;
+    @apply w-full rounded-full bg-purple-100 bg-cover text-[#00273f] hover:text-white;
   }
 
   /* Profile Page */
@@ -327,8 +328,18 @@
     @apply hidden w-full flex-col items-start gap-2 md:flex;
   }
 
+  /* styles.css or a similar stylesheet */
+  .bg-custom-active {
+    background-color: #00273f;
+  }
+
   .sidebar-nav_element {
-    @apply flex-center p-16-semibold w-full whitespace-nowrap rounded-full bg-cover  transition-all hover:bg-purple-100 hover:shadow-inner;
+    @apply flex-center p-16-semibold w-full whitespace-nowrap rounded-full bg-cover  transition-all hover:shadow-inner;
+  }
+
+  .sidebar-nav_element:hover {
+    background-color:#e7eaf6;  /* Gradient from #00273f to nearly white */
+    color: #00273f; /* Set text color to #00273f for better readability */
   }
 
   .sidebar-link {
@@ -341,7 +352,7 @@
   }
 
   .media-uploader-field {
-    @apply grid h-fit min-h-[200px] grid-cols-1 gap-5 py-4 md:grid-cols-2;
+    @apply grid h-fit min-h-[200px] grid-cols-1 gap-5 py-3 md:grid-cols-2;
   }
 
   /* TransformedImage Component */
